Closed Bug 331558 Opened 20 years ago Closed 20 years ago

Decompiler: Missing = in default xml namespace statement

Categories

(Core :: JavaScript Engine, defect)

1.8 Branch
defect
Not set
minor

Tracking

()

VERIFIED FIXED
mozilla1.8.1

People

(Reporter: jerfa, Assigned: jerfa)

References

()

Details

(Keywords: verified1.8.0.4, verified1.8.1)

Attachments

(1 file)

For example, |default xml namespace = 'abc'| is printed as |default xml namespace 'abc'|. Since I'm not too familiar with E4X this drove me mad for a while when the lines I simply copied and pasted produced syntax errors. ;-)
Attached patch Add =Splinter Review
I know I promised no more patches but this one was so trivial it doesn't count...
Attachment #216093 - Flags: review?(brendan)
Comment on attachment 216093 [details] [diff] [review] Add = brendan must have been asleep when he was writing this. I'll check it in.
Attachment #216093 - Flags: review?(brendan) → review+
Assignee: general → jerfa
Fix checked into trunk.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
Comment on attachment 216093 [details] [diff] [review] Add = Totally safe one-constant-char-in-format-string change, good for 1.5.0.3. /be
Attachment #216093 - Flags: approval1.8.0.3?
Attachment #216093 - Flags: approval-branch-1.8.1+
Comment on attachment 216093 [details] [diff] [review] Add = Please check in promptly on the 1.8.0 branch. Thanks!
Attachment #216093 - Flags: approval1.8.0.3? → approval1.8.0.3+
Checking in regress-331558.js; /cvsroot/mozilla/js/tests/e4x/Regress/regress-331558.js,v <-- regress-331558 s initial revision: 1.1 done
Flags: in-testsuite+
Checked in on both branches. mozilla/js/src/jsopcode.c 3.89.2.8.2.5 mozilla/js/src/jsopcode.c 3.89.2.12
Target Milestone: mozilla1.9alpha → mozilla1.8.1
Version: Trunk → 1.8 Branch
verified fixed 1.8.0.4, 1.8, 1.9 win/linux/mac 20060507/20060508 builds
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: