Fix a silly typo decompiling the setting of the default xml namespace. bug 331558, patch by Erik Fabert <jerfa@email.it>, r=mrbkap